feat: add jwt required decorator
